# OrbbecGemini215-3DScanner

./: .gitattributes  .gitignore  README.en.md  README.md  pyproject.toml
docs/: architecture.md  next-session.md  project-handoff-2026-07-17.md  prototype-scope.md  roadmap.md  scan-workflow.md  setup-orbbec-sdk.md
scripts/: 00_generate_aruco_marker.py  01_rgbd_viewer.py  02_export_pointcloud.py  03_marker_tracking.py  03_pointcloud_viewer.py  04_pose_estimation.py  05_merge_pointcloud.py  06_tsdf_fusion.py  07_export_mesh.py  08_view_ply.py  09_crop_ply.py  10_reconstruct_mesh.py  11_convert_mesh.py  12_hardware_qualification.py  13_markerless_tracking.py  14_markerless_scanner.py  16_capture_diagnostic.py  17_rtabmap_activity_probe.py  17_scanner-3d_3d_scanner.py  _bootstrap.py
tests/: __init__.py  test_aruco_tracking.py  test_brand_neutrality.py  test_camera_models.py  test_camera_preflight.py  test_camera_profile_documentation.py  test_capture_diagnostic.py  test_convert_mesh_script.py  test_crop_catalog.py  test_crop_ply_script.py  test_dashboard_theme.py  test_depth_pipeline.py  test_depth_processing.py  test_export_pointcloud_script.py  test_generate_aruco_marker_script.py  test_guided_workflow.py  test_hardware_qualification_script.py  test_imu_buffer.py  test_imu_tracking.py  test_keyframes.py  test_live_fusion.py  test_marker_tracking_script.py  test_markerless_scanner_script.py  test_markerless_tracker.py  test_markerless_tracking_script.py  test_merge_pointcloud_script.py  test_mesh_orientation.py  test_mesh_reconstruction.py  test_object_roi.py  (+40 more)
(+109 files in other folders)
