[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbbec-gemini215-3d-scanner"
version = "0.1.0"
description = "Python prototype for real-time RGB-D 3D scanning with Orbbec Gemini 215."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "opencv-contrib-python>=4.9",
  "open3d>=0.18",
  "pyorbbecsdk2>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
